--- a/public/css/style.css
+++ b/public/css/style.css
@@ -402,7 +402,7 @@ body {
   height: 85vh;
   margin-top: 5vh;
   margin-left: 100vw;
-  background-color: rgba(255, 255, 255, 0.733);
+  /*background-color: rgba(255, 255, 255, 0.733);*/
   position: absolute;
   left: 5%;
   top: 5%;
@@ -423,12 +423,22 @@ body {
   align-items: center;
   display: none;
 }
+.pictures-content img {
+  box-sizing: border-box;
+  display: flex;
+  object-fit: cover;
+  max-width: 100%;
+  height: 22%;
+  border-radius: 5vw;
+  margin-bottom: 3%;
+  box-shadow: 1vw 1vw 0.5vw black;
+}
 
 .page-content {
   max-width: 65vw;
-  height: 80vh;
+  height: 86vh;
   margin-top: 5vh;
-  margin-left: 100vw;
+  margin-left: -100vw;
   background-color: rgba(255, 255, 255, 0.541);
   position: absolute;
   left: 5%;
