--- a/public/css/style.css
+++ b/public/css/style.css
@@ -427,9 +427,9 @@ body {
   box-sizing: border-box;
   display: flex;
   object-fit: cover;
-  max-width: 100%;
+  max-width: 65vw;
   height: 22%;
-  border-radius: 5vw;
+  border-radius: 3%;
   margin-bottom: 3%;
   box-shadow: 1vw 1vw 0.5vw black;
 }
