--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -159,7 +159,7 @@ body {
 }
 
 .page-content {
-  max-width: 65vw;
+  max-width: 80vw;
   height: 86vh;
   margin-top: 5vh;
   margin-left: -100vw;
@@ -179,8 +179,11 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   z-index: 3;
-  align-content:flex-start;
-  justify-content:center;
+  align-content:center;
+  align-items:flex-start;
+  justify-content:space-around;
+  text-align:center;
+
   & span {
 
   }
@@ -189,15 +192,16 @@ body {
     align-items: center;
     align-content:center;
     justify-items:space-around;
+    justify-content:space-around;
     /*background: linear-gradient(120deg, rgb(255, 145, 19) 30%, rgb(255, 254, 254) 60%,rgb(255, 162, 24) 90%);*/
     color:rgb(255, 187, 0);
-    width:50%;
+    width:80%;
     height:100%;
-    font-size: 100%;
-    line-height:100%;
+    font-size: 80%;
+    line-height:80%;
     flex-wrap: nowrap;
     flex-shrink: 1;
-    padding: 30%;
+   
     text-shadow: 0 0 3vw rgba(255, 255, 255, 0.815);
     &:hover {
       /*color: white;
@@ -209,15 +213,15 @@ body {
   h3 {
     box-sizing:border-box;
     color: rgb(255, 255, 255);
-    width:65vw;
+    width:60vw;
     text-align: center;
     margin: 0 0 5vw 0;
     font-size: 3vh;
     font-family: "Roboto";
     text-shadow: 0 0 2vw black;
     background-color:rgba(0, 0, 0, 0.534);
-    margin:0 0;
     padding: 5% 5%;
+
   }
 
   & p {
@@ -227,11 +231,14 @@ body {
     flex-direction: row;
     margin-bottom: 1vh;
 
-    align-items: center;
+    margin:0;
     width: 45%;
-    height: 10%;
+    height: 15%;
     color: rgb(255, 255, 255);
-    justify-content: space-around;
+    align-items: center;
+    align-content:center;
+    justify-items:space-around;
+    justify-content:space-around;
     flex-shrink: 1;
 
     &:nth-child(3) {
@@ -247,6 +254,7 @@ body {
       &:hover { 
         background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
         background-clip:text;
+        -webkit-background-clip: text;
     color:transparent;
     text-shadow:0 0 0.5vw rgb(255, 255, 255, 0.2) ;
       }
@@ -266,6 +274,7 @@ body {
     &:hover { 
     background:linear-gradient(270deg, rgb(225, 0, 255),rgb(17, 193, 247), green);
     background-clip:text;
+    -webkit-background-clip: text;
     color:transparent;
     text-shadow:0 0 0.5vw rgb(255, 255, 255,0.1) ;
   }
@@ -323,10 +332,10 @@ body {
   flex-direction: column;
   position: fixed;
   top: 100vh;
-  right: 3vw;
+  right: 5vw;
   padding-top: 5vh;
 
-  width: 10vh;
+  width: 15vw;
   height: 100vh;
   z-index: 4;
   justify-content: flex-start;
@@ -335,7 +344,7 @@ body {
   background: linear-gradient(180deg, black, rgba(255, 255, 255, 0.76));
   &__image {
     object-fit: cover;
-    width: 12vh;
+    width: 20vw;
     margin-bottom: 5vh;
     background-color: rgba(211, 211, 211, 0.5);
     border-radius: 50%;
@@ -348,7 +357,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 3vh;
+    height: 8vw;
     position: relative;
     bottom: 0;
     /*background-color: rgba(15, 15, 15, 0.308);*/
