--- a/public/css/style.css
+++ b/public/css/style.css
@@ -460,6 +460,7 @@ body {
   text-align: center;
 }
 .page-content i {
+  display: flex;
   align-items: center;
   align-content: center;
   justify-items: space-around;
@@ -468,8 +469,8 @@ body {
   color: #ffbb00;
   width: 80%;
   height: 100%;
-  font-size: 80%;
-  line-height: 80%;
+  font-size: 50%;
+  line-height: 10%;
   flex-wrap: nowrap;
   flex-shrink: 1;
   text-shadow: 0 0 3vw rgba(255, 255, 255, 0.815);
@@ -497,8 +498,9 @@ body {
   display: flex;
   flex-direction: row;
   margin-bottom: 1vh;
+  overflow: visible;
   margin: 0;
-  width: 45%;
+  width: 40%;
   height: 15%;
   color: white;
   align-items: center;
