--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -188,7 +188,7 @@ body {
 
   }
   & i {
-
+    display:flex;
     align-items: center;
     align-content:center;
     justify-items:space-around;
@@ -197,8 +197,8 @@ body {
     color:rgb(255, 187, 0);
     width:80%;
     height:100%;
-    font-size: 80%;
-    line-height:80%;
+    font-size: 50%;
+    line-height:10%;
     flex-wrap: nowrap;
     flex-shrink: 1;
    
@@ -230,9 +230,9 @@ body {
     display: flex;
     flex-direction: row;
     margin-bottom: 1vh;
-
+    overflow:visible;
     margin:0;
-    width: 45%;
+    width: 40%;
     height: 15%;
     color: rgb(255, 255, 255);
     align-items: center;
