--- a/public/css/style.css
+++ b/public/css/style.css
@@ -270,9 +270,69 @@ Child N°3 will get a delay of 2 + 0.25 * 3 =  2.75s, N°4 will get 2 + 0.25 * 4
 @keyframes enter-content-left {
   0% {
     margin-left: -100vw;
+    display: flex;
   }
   100% {
     margin-left: 0vw;
+    left: 5vw;
+  }
+}
+@keyframes send-to-top {
+  0% {
+    top: 0vh;
+  }
+  100% {
+    top: -95vh;
+  }
+}
+@keyframes expand-to-bottom {
+  0% {
+    top: -95vh;
+  }
+  100% {
+    top: 0vh;
+  }
+}
+@keyframes rotate-twice {
+  33% {
+    transform: rotate(40deg);
+  }
+  66% {
+    transform: rotate(-30deg);
+    background-color: black;
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes opacity-to-one {
+  40% {
+    transform: rotate(180deg);
+  }
+  60% {
+    transform: rotate(360deg);
+  }
+  80% {
+    transform: rotate(720deg);
+  }
+  90% {
+    transform: rotate(1080deg);
+  }
+  95% {
+    transform: rotate(1440deg);
+  }
+  100% {
+    transform: rotate(1800deg);
+    opacity: 1;
+  }
+}
+@keyframes exit-right {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: 200vw;
+    display: none;
   }
 }
 body {
@@ -282,9 +342,18 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   overflow: hidden;
+  margin: 0 0;
+}
+
+.exit-right {
+  animation: exit-right 0.5s ease-in forwards;
+}
+
+.enter-left {
+  animation: enter-content-left 0.5s 0.25s ease-out forwards;
 }
 
 .main-content {
@@ -320,34 +389,109 @@ body {
   width: 65vw;
   height: 85vh;
   margin-top: 5vh;
-  margin-left: 100vw;
   background-color: rgba(255, 255, 255, 0.733);
-  position: absolute;
+  position: relative;
   left: 5%;
   top: 5%;
-  right: 5%;
-  bottom: 5%;
-  animation: enter-content-left 0.5s 0s ease-in-out forwards;
+  margin-left: -10vw;
   justify-items: flex-start;
   justify-content: flex-start;
   font-family: "Cabin Sketch", cursive;
   font-weight: bold;
-  font-size: 3vh;
+  font-size: 20vw;
   color: white;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   z-index: 3;
   align-content: center;
   align-items: center;
-  display: none;
+}
+.listen-content p {
+  box-sizing: border-box;
+  font-family: "Roboto";
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1vh;
+  overflow: visible;
+  margin: 0 0;
+  width: 45%;
+  height: 30%;
+  color: white;
+  background-color: rgba(255, 255, 255, 0.589);
+  align-items: center;
+  align-content: center;
+  justify-items: space-around;
+  justify-content: space-around;
+  flex-shrink: 1;
+  opacity: 0.8;
+}
+.listen-content p:hover {
+  opacity: 1;
+}
+.listen-content p:hover i {
+  transform: scale(1.1);
+}
+.listen-content p i {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-items: space-around;
+  justify-content: space-around;
+  /*background: linear-gradient(120deg, rgb(255, 145, 19) 30%, rgb(255, 254, 254) 60%,rgb(255, 162, 24) 90%);*/
+  color: #ffbb00;
+  width: 80%;
+  height: 100%;
+  font-size: 100%;
+  line-height: 100%;
+  flex-wrap: nowrap;
+  flex-shrink: 1;
+  text-shadow: 0 0 3vw rgba(0, 0, 0, 0.815);
+}
+.listen-content p i:hover {
+  /*color: white;
+  transform: scale(1.1);*/
+}
+.listen-content p:nth-child(1) i {
+  color: #00cc22;
+}
+.listen-content p:nth-child(2) i {
+  background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.2);
+}
+.listen-content p:nth-child(3) i {
+  color: #3146ff;
+}
+.listen-content p:nth-child(4) i {
+  background: linear-gradient(270deg, #e100ff, #11c1f7, green);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
+}
+.listen-content p:nth-child(5) i {
+  color: #ff0202;
+}
+.listen-content p:nth-child(6) i {
+  background: linear-gradient(180deg, #030303, #ff9101, white);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
+}
+.listen-content p > :not(i) {
+  font-family: "Cabin Sketch", cursive;
+  font-size: 2vw;
 }
 
 .concert-content {
   width: 65vw;
   height: 85vh;
   margin-top: 5vh;
-  margin-left: 100vw;
+  margin-left: -100vw;
   background-color: rgba(255, 255, 255, 0.733);
   position: absolute;
   left: 5%;
@@ -374,41 +518,44 @@ body {
   width: 65vw;
   height: 85vh;
   margin-top: 5vh;
-  margin-left: 100vw;
-  background-color: rgba(255, 255, 255, 0.733);
+  margin-left: -100vw;
+  background-color: rgba(255, 255, 255, 0.925);
   position: absolute;
   left: 5%;
   top: 5%;
   right: 5%;
   bottom: 5%;
-  animation: enter-content-left 0.5s 0s ease-in-out forwards;
   justify-items: flex-start;
   justify-content: flex-start;
   font-family: "Cabin Sketch", cursive;
   font-weight: bold;
-  font-size: 3vh;
+  font-size: 4vw;
   color: white;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   z-index: 3;
   align-content: center;
   align-items: center;
   display: none;
+  overflow-y: scroll;
+}
+.band-content p {
+  color: black;
+  padding: 0 5vw;
 }
 
 .pictures-content {
   width: 65vw;
   height: 85vh;
   margin-top: 5vh;
-  margin-left: 100vw;
+  margin-left: -100vw;
   /*background-color: rgba(255, 255, 255, 0.733);*/
   position: absolute;
-  left: 5%;
+  left: -100vw;
   top: 5%;
   right: 5%;
   bottom: 5%;
-  animation: enter-content-left 0.5s 0s ease-in-out forwards;
   justify-items: flex-start;
   justify-content: flex-start;
   font-family: "Cabin Sketch", cursive;
@@ -421,31 +568,28 @@ body {
   z-index: 3;
   align-content: center;
   align-items: center;
-  display: none;
 }
 .pictures-content img {
   box-sizing: border-box;
-  display: flex;
+  max-width: 75vw;
   object-fit: cover;
-  max-width: 65vw;
-  height: 22%;
+  max-height: 24%;
   border-radius: 3%;
   margin-bottom: 3%;
   box-shadow: 1vw 1vw 0.5vw black;
 }
 
 .page-content {
-  max-width: 80vw;
+  max-width: 75vw;
   height: 86vh;
   margin-top: 5vh;
   margin-left: -100vw;
-  background-color: rgba(255, 255, 255, 0.541);
+  background-color: rgba(255, 255, 255, 0.623);
   position: absolute;
   left: 5%;
   top: 5%;
   right: 5%;
   bottom: 5%;
-  animation: enter-content-left 0.5s 2.5s ease-in-out forwards;
   font-family: "Cabin Sketch", cursive;
   font-weight: bold;
   font-size: 100px;
@@ -454,12 +598,55 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   z-index: 3;
-  align-content: center;
-  align-items: flex-start;
-  justify-content: space-around;
+  align-content: flex-start;
+  align-items: center;
+  justify-content: flex-start;
   text-align: center;
 }
-.page-content i {
+.page-content--extended {
+  max-width: 90vw;
+}
+.page-content--pictures {
+  overflow-y: scroll;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.page-content--pictures img {
+  display: flex;
+  flex-basis: 100%;
+  min-height: 25%;
+  box-sizing: border-box;
+  width: 100%;
+  object-fit: cover;
+  margin-bottom: 3%;
+  box-shadow: 1vw 1vw 0.5vw black;
+}
+.page-content--listen p {
+  box-sizing: border-box;
+  font-family: "Roboto";
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1vh;
+  overflow: visible;
+  margin: 0 0;
+  width: 30%;
+  height: 12vh;
+  color: white;
+  background-color: rgba(255, 255, 255, 0.589);
+  align-items: center;
+  align-content: center;
+  justify-items: space-around;
+  justify-content: space-around;
+  flex-shrink: 1;
+  overflow: hidden;
+}
+.page-content--listen p:hover {
+  opacity: 1;
+}
+.page-content--listen p:hover i {
+  transform: scale(1.1);
+}
+.page-content--listen p i {
   display: flex;
   align-items: center;
   align-content: center;
@@ -469,15 +656,49 @@ body {
   color: #ffbb00;
   width: 80%;
   height: 100%;
-  font-size: 50%;
-  line-height: 10%;
+  font-size: 10vh;
+  line-height: 10vh;
   flex-wrap: nowrap;
-  flex-shrink: 1;
-  text-shadow: 0 0 3vw rgba(255, 255, 255, 0.815);
+  flex-grow: 1;
+  text-shadow: 0 0 3vw rgba(0, 0, 0, 0.815);
 }
-.page-content i:hover {
+.page-content--listen p i:hover {
   /*color: white;
   transform: scale(1.1);*/
+}
+.page-content--listen p:nth-child(1) i {
+  color: #00cc22;
+}
+.page-content--listen p:nth-child(2) i {
+  background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.2);
+}
+.page-content--listen p:nth-child(3) i {
+  color: #3146ff;
+}
+.page-content--listen p:nth-child(4) i {
+  background: linear-gradient(270deg, #e100ff, #11c1f7, green);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
+}
+.page-content--listen p:nth-child(5) i {
+  color: #ff0202;
+}
+.page-content--listen p:nth-child(6) i {
+  background: linear-gradient(180deg, #030303, #ff9101, white);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
+}
+.page-content--listen p > :not(i) {
+  font-family: "Cabin Sketch", cursive;
+  font-size: 2vw;
 }
 .page-content h2,
 .page-content h3 {
@@ -486,58 +707,45 @@ body {
   width: 60vw;
   text-align: center;
   margin: 0 0 5vw 0;
-  font-size: 3vh;
+  font-size: 3vw;
   font-family: "Roboto";
   text-shadow: 0 0 2vw black;
-  background-color: rgba(0, 0, 0, 0.534);
+  background-color: rgba(0, 0, 0, 0.849);
   padding: 5% 5%;
+  margin-left: -5vw;
+  box-shadow: 0 0 1vw black;
 }
 .page-content p {
   box-sizing: border-box;
   font-family: "Roboto";
   display: flex;
   flex-direction: row;
-  margin-bottom: 1vh;
-  overflow: visible;
-  margin: 0;
-  width: 40%;
-  height: 15%;
+  padding: 5vw 0;
+  overflow: hidden;
+  margin: 0 5%;
+  width: 90%;
   color: white;
+  background-color: rgba(255, 255, 255, 0.589);
   align-items: center;
   align-content: center;
   justify-items: space-around;
   justify-content: space-around;
   flex-shrink: 1;
+  font-size: 5vw;
+  color: black;
 }
-.page-content p:nth-child(3) i:hover {
-  color: #02ff2c;
+.page-content img {
+  object-fit: cover;
+  display: flex;
+  max-height: 24%;
+  max-width: 90vw;
+  align-items: flex-end;
+  align-content: flex-end;
+  background-color: transparent;
+  overflow: hidden;
 }
-.page-content p:nth-child(4) i:hover {
-  background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.2);
-}
-.page-content p:nth-child(5) i:hover {
-  color: #3146ff;
-}
-.page-content p:nth-child(6) i:hover {
-  background: linear-gradient(270deg, #e100ff, #11c1f7, green);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
-}
-.page-content p:nth-child(7) i:hover {
-  color: #ff0202;
-}
-.page-content p:nth-child(8) i:hover {
-  color: #ffa602;
-}
-.page-content p > :not(i) {
-  font-family: "Cabin Sketch", cursive;
-  font-size: 2vw;
+.page-content img:hover {
+  /*animation: opacity-to-one 5s linear forwards;*/
 }
 
 .the-man {
@@ -571,10 +779,19 @@ body {
   width: 15vw;
   height: 100vh;
   z-index: 4;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
-  animation: enter-the-menu-below 1s 2.5s ease-in-out forwards;
+  align-content: flex-end;
   background: linear-gradient(180deg, black, rgba(255, 255, 255, 0.76));
+}
+.nav-bar--initial {
+  animation: enter-the-menu-below 1s 2.5s ease-in-out forwards;
+}
+.nav-bar--hidden {
+  animation: send-to-top 1s ease-in-out forwards;
+}
+.nav-bar--visible {
+  animation: expand-to-bottom 1s ease-in-out forwards;
 }
 .nav-bar__image {
   object-fit: cover;
@@ -584,6 +801,9 @@ body {
   border-radius: 50%;
   border: 0.3vh solid orange;
   box-shadow: -1vh 0 1vh black;
+}
+.nav-bar__image:hover {
+  animation: rotate-twice 2s ease-in-out forwards;
 }
 .nav-bar__item {
   z-index: 99;
@@ -599,6 +819,9 @@ body {
   font-family: "Cabin Sketch", cursive;
   font-size: 2vh;
   margin-top: 7vh;
+}
+.nav-bar__item--upside-down {
+  transform: rotate(180deg);
 }
 .nav-bar__item > :not(i) {
   height: 2vh;
