--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,9 +5,18 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   overflow: hidden;
+  margin: 0 0;
+}
+
+.exit-right {
+  animation: exit-right 0.5s ease-in forwards;
+}
+
+.enter-left {
+  animation: enter-content-left 0.5s 0.25s ease-out forwards;
 }
 
 .main-content {
@@ -44,34 +53,147 @@ body {
   width: 65vw;
   height: 85vh;
   margin-top: 5vh;
-  margin-left: 100vw;
+  
   background-color: rgba(255, 255, 255, 0.733);
-  position: absolute;
+  position: relative;
   left: 5%;
   top: 5%;
-  right: 5%;
-  bottom: 5%;
-  animation: enter-content-left 0.5s 0s ease-in-out forwards;
+  margin-left: -10vw;
   justify-items: flex-start;
   justify-content: flex-start;
   font-family: "Cabin Sketch", cursive;
   font-weight: bold;
-  font-size: 3vh;
+  font-size: 20vw;
   color: rgb(255, 255, 255);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   z-index: 3;
   align-content: center;
   align-items: center;
-  display: none;
+
+  & p {
+    box-sizing: border-box;
+    font-family: "Roboto";
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1vh;
+    overflow:visible;
+    margin:0 0;
+    width: 45%;
+    height: 30%;
+    color: rgb(255, 255, 255);
+    background-color:rgba(255, 255, 255, 0.589);
+    align-items: center;
+    align-content:center;
+    justify-items:space-around;
+    justify-content:space-around;
+    flex-shrink: 1;
+    opacity: 0.8;
+    &:hover {
+      opacity:1;
+      & i {
+      transform:scale(1.1);
+      }
+    }
+    & i {
+      display:flex;
+      align-items: center;
+      align-content:center;
+      justify-items:space-around;
+      justify-content:space-around;
+      /*background: linear-gradient(120deg, rgb(255, 145, 19) 30%, rgb(255, 254, 254) 60%,rgb(255, 162, 24) 90%);*/
+      color:rgb(255, 187, 0);
+      width:80%;
+      height:100%;
+      font-size: 100%;
+      line-height:100%;
+      flex-wrap: nowrap;
+      flex-shrink: 1;
+     
+      text-shadow: 0 0 3vw rgba(0, 0, 0, 0.815);
+      &:hover {
+        /*color: white;
+        transform: scale(1.1);*/
+      }
+    }
+
+    &:nth-child(1) {
+      & i {
+
+        color: rgb(0, 204, 34);
+
+    }
+  }
+
+  &:nth-child(2) {
+    & i {
+
+        background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
+        background-clip:text;
+        -webkit-background-clip: text;
+    color:transparent;
+    text-shadow:0 0 0.5vw rgb(255, 255, 255, 0.2) ;
+
+  }
+}
+
+&:nth-child(3) {
+  & i {
+
+    color: rgb(49, 70, 255);
+
+}
+}
+
+&:nth-child(4) {
+  & i {
+
+    background:linear-gradient(270deg, rgb(225, 0, 255),rgb(17, 193, 247), green);
+    background-clip:text;
+    -webkit-background-clip: text;
+    color:transparent;
+    text-shadow:0 0 0.5vw rgb(255, 255, 255,0.1) ;
+
+}
+}
+
+    &:nth-child(5) {
+      & i {
+          color: rgb(255, 2, 2);
+
+    }
+  }
+
+  &:nth-child(6) {
+    & i {
+
+        
+    background:linear-gradient(180deg, rgb(3, 3, 3),rgb(255, 145, 1), rgb(255, 255, 255));
+    background-clip:text;
+    -webkit-background-clip: text;
+    color:transparent;
+    text-shadow:0 0 0.5vw rgb(255, 255, 255,0.1) ;
+
+  }
+}
+    
+    & > :not(i) {
+      font-family: "Cabin Sketch", cursive;
+      font-size: 2vw;
+    }
+  
+
+
+    
+  }
 }
 
 .concert-content {
   width: 65vw;
   height: 85vh;
   margin-top: 5vh;
-  margin-left: 100vw;
+  margin-left: -100vw;
   background-color: rgba(255, 255, 255, 0.733);
   position: absolute;
   left: 5%;
@@ -98,41 +220,44 @@ body {
   width: 65vw;
   height: 85vh;
   margin-top: 5vh;
-  margin-left: 100vw;
-  background-color: rgba(255, 255, 255, 0.733);
+  margin-left: -100vw;
+  background-color: rgba(255, 255, 255, 0.925);
   position: absolute;
   left: 5%;
   top: 5%;
   right: 5%;
   bottom: 5%;
-  animation: enter-content-left 0.5s 0s ease-in-out forwards;
   justify-items: flex-start;
   justify-content: flex-start;
   font-family: "Cabin Sketch", cursive;
   font-weight: bold;
-  font-size: 3vh;
+  font-size: 4vw;
   color: rgb(255, 255, 255);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   z-index: 3;
   align-content: center;
   align-items: center;
   display: none;
+  overflow-y:scroll;
+  & p {
+    color:black;
+    padding: 0 5vw;
+  }
 }
 
 .pictures-content {
   width: 65vw;
   height: 85vh;
   margin-top: 5vh;
-  margin-left: 100vw;
+  margin-left: -100vw;
   /*background-color: rgba(255, 255, 255, 0.733);*/
   position: absolute;
-  left: 5%;
+  left: -100vw;
   top: 5%;
   right: 5%;
   bottom: 5%;
-  animation: enter-content-left 0.5s 0s ease-in-out forwards;
   justify-items: flex-start;
   justify-content: flex-start;
   font-family: "Cabin Sketch", cursive;
@@ -145,13 +270,11 @@ body {
   z-index: 3;
   align-content: center;
   align-items: center;
-  display: none;
   & img {
     box-sizing:border-box;
-    display:flex;
+    max-width:75vw;
     object-fit:cover;
-    max-width:65vw;
-    height: 22%;
+    max-height: 24%;
     border-radius: 3%;
     margin-bottom:3%;
     box-shadow:1vw 1vw 0.5vw rgb(0, 0, 0);
@@ -159,18 +282,16 @@ body {
 }
 
 .page-content {
-  max-width: 80vw;
+  max-width: 75vw;
   height: 86vh;
   margin-top: 5vh;
   margin-left: -100vw;
-  background-color: rgba(255, 255, 255, 0.541);
+  background-color: rgba(255, 255, 255, 0.623);
   position: absolute;
   left: 5%;
   top: 5%;
   right: 5%;
   bottom: 5%;
-  animation: enter-content-left 0.5s 2.5s ease-in-out forwards;
-
   font-family: "Cabin Sketch", cursive;
   font-weight: bold;
   font-size: 100px;
@@ -179,36 +300,151 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   z-index: 3;
-  align-content:center;
-  align-items:flex-start;
-  justify-content:space-around;
+  align-content:flex-start;
+  align-items:center;
+  justify-content:flex-start;
   text-align:center;
 
-  & span {
 
+  &--extended {
+    max-width: 90vw;
   }
-  & i {
-    display:flex;
-    align-items: center;
-    align-content:center;
-    justify-items:space-around;
-    justify-content:space-around;
-    /*background: linear-gradient(120deg, rgb(255, 145, 19) 30%, rgb(255, 254, 254) 60%,rgb(255, 162, 24) 90%);*/
-    color:rgb(255, 187, 0);
-    width:80%;
-    height:100%;
-    font-size: 50%;
-    line-height:10%;
-    flex-wrap: nowrap;
-    flex-shrink: 1;
-   
-    text-shadow: 0 0 3vw rgba(255, 255, 255, 0.815);
-    &:hover {
-      /*color: white;
-      transform: scale(1.1);*/
+
+  &--pictures {
+    overflow-y:scroll;
+    flex-direction:row;
+    flex-wrap: wrap;
+    & img {
+      display:flex;
+      flex-basis:100%;
+      min-height: 25%;
+      box-sizing:border-box;
+      width:100%;
+      object-fit:cover;
+      margin-bottom:3%;
+      box-shadow:1vw 1vw 0.5vw rgb(0, 0, 0);
     }
   }
 
+  &--listen {
+    & p {
+      box-sizing: border-box;
+      font-family: "Roboto";
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 1vh;
+      overflow:visible;
+      margin:0 0;
+      width: 30%;
+      height: 12vh;
+      color: rgb(255, 255, 255);
+      background-color:rgba(255, 255, 255, 0.589);
+      align-items: center;
+      align-content:center;
+      justify-items:space-around;
+      justify-content:space-around;
+      flex-shrink: 1;
+      overflow:hidden;
+      &:hover {
+        opacity:1;
+        & i {
+        transform:scale(1.1);
+        }
+      }
+      & i {
+        display:flex;
+        align-items: center;
+        align-content:center;
+        justify-items:space-around;
+        justify-content:space-around;
+        /*background: linear-gradient(120deg, rgb(255, 145, 19) 30%, rgb(255, 254, 254) 60%,rgb(255, 162, 24) 90%);*/
+        color:rgb(255, 187, 0);
+        width:80%;
+        height:100%;
+        font-size: 10vh;
+        line-height:10vh;
+        flex-wrap: nowrap;
+        flex-grow: 1;
+       
+        text-shadow: 0 0 3vw rgba(0, 0, 0, 0.815);
+        &:hover {
+          /*color: white;
+          transform: scale(1.1);*/
+        }
+      }
+  
+      &:nth-child(1) {
+        & i {
+  
+          color: rgb(0, 204, 34);
+  
+      }
+    }
+  
+    &:nth-child(2) {
+      & i {
+  
+          background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
+          background-clip:text;
+          -webkit-background-clip: text;
+      color:transparent;
+      text-shadow:0 0 0.5vw rgb(255, 255, 255, 0.2) ;
+  
+    }
+  }
+  
+  &:nth-child(3) {
+    & i {
+  
+      color: rgb(49, 70, 255);
+  
+  }
+  }
+  
+  &:nth-child(4) {
+    & i {
+  
+      background:linear-gradient(270deg, rgb(225, 0, 255),rgb(17, 193, 247), green);
+      background-clip:text;
+      -webkit-background-clip: text;
+      color:transparent;
+      text-shadow:0 0 0.5vw rgb(255, 255, 255,0.1) ;
+  
+  }
+  }
+  
+      &:nth-child(5) {
+        & i {
+            color: rgb(255, 2, 2);
+  
+      }
+    }
+  
+    &:nth-child(6) {
+      & i {
+  
+          
+      background:linear-gradient(180deg, rgb(3, 3, 3),rgb(255, 145, 1), rgb(255, 255, 255));
+      background-clip:text;
+      -webkit-background-clip: text;
+      color:transparent;
+      text-shadow:0 0 0.5vw rgb(255, 255, 255,0.1) ;
+  
+    }
+  }
+      
+      & > :not(i) {
+        font-family: "Cabin Sketch", cursive;
+        font-size: 2vw;
+      }
+    
+  
+  
+      
+    }
+
+  }
+  
   & h2,
   h3 {
     box-sizing:border-box;
@@ -216,11 +452,13 @@ body {
     width:60vw;
     text-align: center;
     margin: 0 0 5vw 0;
-    font-size: 3vh;
+    font-size: 3vw;
     font-family: "Roboto";
     text-shadow: 0 0 2vw black;
-    background-color:rgba(0, 0, 0, 0.534);
+    background-color:rgba(0, 0, 0, 0.849);
     padding: 5% 5%;
+    margin-left: -5vw;
+    box-shadow: 0 0 1vw black;
 
   }
 
@@ -229,79 +467,35 @@ body {
     font-family: "Roboto";
     display: flex;
     flex-direction: row;
-    margin-bottom: 1vh;
-    overflow:visible;
-    margin:0;
-    width: 40%;
-    height: 15%;
+    padding: 5vw 0;
+    overflow:hidden;
+    margin:0 5%;
+    width: 90%;
     color: rgb(255, 255, 255);
+    background-color:rgba(255, 255, 255, 0.589);
     align-items: center;
     align-content:center;
     justify-items:space-around;
     justify-content:space-around;
     flex-shrink: 1;
+    font-size:5vw;
+    color:black;
 
-    &:nth-child(3) {
-      & i {
-        &:hover { 
-        color: rgb(2, 255, 44);
-      }
-    }
-  }
-
-  &:nth-child(4) {
-    & i {
-      &:hover { 
-        background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
-        background-clip:text;
-        -webkit-background-clip: text;
-    color:transparent;
-    text-shadow:0 0 0.5vw rgb(255, 255, 255, 0.2) ;
-      }
-  }
-}
-
-&:nth-child(5) {
-  & i {
-    &:hover { 
-    color: rgb(49, 70, 255);
-  }
-}
-}
-
-&:nth-child(6) {
-  & i {
-    &:hover { 
-    background:linear-gradient(270deg, rgb(225, 0, 255),rgb(17, 193, 247), green);
-    background-clip:text;
-    -webkit-background-clip: text;
-    color:transparent;
-    text-shadow:0 0 0.5vw rgb(255, 255, 255,0.1) ;
-  }
-}
-}
-
-    &:nth-child(7) {
-      & i {
-        &:hover {
-          color: rgb(255, 2, 2);
-      }
-    }
-  }
-
-  &:nth-child(8) {
-    & i {
-      &:hover {
-        color: rgb(255, 166, 2);
-    }
-  }
-}
     
-    & > :not(i) {
-      font-family: "Cabin Sketch", cursive;
-      font-size: 2vw;
-    }
   
+}
+& img {
+  object-fit:cover;
+  display:flex;
+  max-height: 24%;
+  max-width:90vw;
+  align-items:flex-end;
+  align-content:flex-end;
+  background-color:transparent;
+  overflow:hidden;
+  &:hover {
+    /*animation: opacity-to-one 5s linear forwards;*/
+  }
 }
 }
 
@@ -338,10 +532,23 @@ body {
   width: 15vw;
   height: 100vh;
   z-index: 4;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
-  animation: enter-the-menu-below 1s 2.5s ease-in-out forwards;
+  align-content:flex-end;
   background: linear-gradient(180deg, black, rgba(255, 255, 255, 0.76));
+
+  &--initial {
+    animation: enter-the-menu-below 1s 2.5s ease-in-out forwards;
+  }
+
+  &--hidden {
+    animation: send-to-top 1s ease-in-out forwards;
+  }
+
+  &--visible {
+    animation: expand-to-bottom 1s ease-in-out forwards;
+  }
+
   &__image {
     object-fit: cover;
     width: 20vw;
@@ -350,6 +557,9 @@ body {
     border-radius: 50%;
     border: 0.3vh solid orange;
     box-shadow: -1vh 0 1vh black;
+    &:hover {
+      animation: rotate-twice 2s ease-in-out forwards;
+    }
   }
   &__item {
     z-index: 99;
@@ -365,6 +575,10 @@ body {
     font-family: "Cabin Sketch", cursive;
     font-size: 2vh;
     margin-top: 7vh;
+    &--upside-down {
+      transform:rotate(180deg);
+    }
+
     & > :not(i) {
       height: 2vh;
       text-align: center;
