--- a/public/css/style.css
+++ b/public/css/style.css
@@ -360,6 +360,7 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 .main-content__background-image {
   object-fit: cover;
@@ -620,6 +621,9 @@ body {
   object-fit: cover;
   margin-bottom: 3%;
   box-shadow: 1vw 1vw 0.5vw black;
+}
+.page-content--band {
+  overflow-y: scroll;
 }
 .page-content--listen p {
   box-sizing: border-box;
