--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,6 +23,7 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow:hidden;
 
   &__background-image {
     object-fit: cover;
@@ -324,6 +325,10 @@ body {
       margin-bottom:3%;
       box-shadow:1vw 1vw 0.5vw rgb(0, 0, 0);
     }
+  }
+
+  &--band {
+    overflow-y:scroll;
   }
 
   &--listen {
