--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -269,17 +269,6 @@
   }
 }
 
-@keyframes enter-content-left {
-  0% {
-    margin-left: -100vw;
-    display:flex;
-  }
-  100% {
-    margin-left: 0vw;
-    left:5vw;
-  }
-}
-
 @keyframes send-to-top {
   0% {
     top: 0vh;
@@ -300,51 +289,84 @@
 
 @keyframes rotate-twice {
   33% {
-    transform:rotate(40deg);
+    transform: rotate(40deg);
   }
   66% {
-    transform:rotate(-30deg);
-    background-color:black;
-    
+    transform: rotate(-30deg);
+    background-color: black;
   }
   100% {
-    transform:rotate(0deg);
-    
+    transform: rotate(0deg);
   }
 }
 
 @keyframes opacity-to-one {
   0% {
- 
-    
   }
   40% {
-    transform:rotate(180deg);
+    transform: rotate(180deg);
   }
   60% {
-    transform:rotate(360deg);
+    transform: rotate(360deg);
   }
   80% {
-    transform:rotate(720deg);
+    transform: rotate(720deg);
   }
   90% {
-    transform:rotate(1080deg);
+    transform: rotate(1080deg);
   }
   95% {
-    transform:rotate(1440deg);
+    transform: rotate(1440deg);
   }
   100% {
-    transform:rotate(1800deg);
-    opacity:1;
+    transform: rotate(1800deg);
+    opacity: 1;
   }
 }
 
 @keyframes exit-right {
   0% {
-    margin-left:0;
+    margin-left: 0;
   }
   100% {
-    margin-left:200vw;
-    display:none;
+    margin-left: 200vw;
+    /*display: none;*/
+  }
+}
+
+@keyframes enter-content-left {
+  0% {
+    margin-left: -100vw;
+    /*display: flex;*/
+  }
+  100% {
+    margin-left: 0vw;
+    left: 5vw;
+  }
+}
+
+@keyframes width-to-90 {
+  from {
+    margin-left: 0vw;
+    left: 5vw;
+    max-width: 75vw;
+  }
+  to {
+    margin-left: 0vw;
+    left: 5vw;
+    max-width: 90vw;
+  }
+}
+
+@keyframes width-to-75 {
+  from {
+    margin-left: 0vw;
+    left: 5vw;
+    max-width: 90vw;
+  }
+  to {
+    margin-left: 0vw;
+    left: 5vw;
+    max-width: 75vw;
   }
 }
